--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,3 @@
-// Color utilities
-
 .danger {
     color: red;
 }
@@ -12,7 +10,7 @@ h1 {
   margin: 0 auto;
 }
 .searchbar__maxwidth {
-  width: 40%;
+  width: 80%;
   margin: 0.6em;
 }
 
@@ -21,4 +19,22 @@ h1 {
   margin: 0; 
   padding: 0;
 }
+.row {
+  margin: 0 0 0 58%;
+}
 
+@media screen and (max-width: 600px) {
+  .searchbar__maxwidth {
+    width: 95%;
+    margin: 0.6em;
+  }
+  mat-expansion-panel {
+    display: block !important;
+  }
+  .header {
+    font-size: small;
+  }
+  .row {
+    margin: 0 0 0 15%;
+  }
+}
