--- a/src/app/roadmap-overview/roadmap-overview.component.html
+++ b/src/app/roadmap-overview/roadmap-overview.component.html
@@ -20,7 +20,7 @@
     <mat-checkbox disabled='true'>Game: Country Quiz</mat-checkbox>
   </p>
   <p>
-      <mat-checkbox disabled='true'>Add PWA Support</mat-checkbox>
+      <mat-checkbox disabled='true'>Add PWA Support*</mat-checkbox>
     </p>
 
 
